# WebRPG

./: .gitignore  Cargo.toml  DEV.md  LICENSE  README.md  TODO.md  findings.md  progress.md  task_plan.md
.github/workflows/: pr.yml  release.yml
ci/: check-compile.sh  check-migrations.sh  smoke-test-server.sh
doc/feature-requests/: feature-1-vtt-media-pack-file-format.md  feature-10-release-notes-automation.md  feature-11-dockerfile.md  feature-12-user-profile-avatars.md  feature-13-server-administration.md  feature-14-email-validation.md  feature-15-invite-links.md  feature-16-jukebox.md  feature-17-discord-bot.md  feature-18-tips-window.md  feature-19-light-dark-mode.md  feature-2-loading-vtt-media-packs.md  feature-20-gm-character-assignment.md  feature-21-login-modal.md  feature-22-auth-hardening.md  feature-23-github-link-landing.md  feature-24-code-cleanup.md  feature-25-favicon.md  feature-26-session-settings.md  feature-27-initiative-turn-number.md  feature-28-lobby-redesign.md  feature-29-session-rate-limit.md  feature-3-window-manager-dock.md  feature-30-modular-map-maker.md  feature-31-pascal-compiler.md  feature-32-map-viewport-panning.md  feature-33-split-windowmanager-into-a-library.md  feature-34-virtual-filesystem.md  feature-36-vfs-terminal-shell.md  feature-37-vfs-file-browser.md  feature-38-online-help.md  feature-39-vfs-upload-zip.md  feature-4-macro-bar.md  feature-40-text-editor.md  feature-41-collaborative-editing.md  feature-42-shell-extended-commands.md  feature-43-consistent-hotkeys.md  feature-44-layer-toolbar.md  feature-45-multi-map-windows.md  feature-46-visibility-classes.md  (+33 more)
doc/nginx/: webrpg
help/: file-viewer.md  map-viewer.md
migrations/2026-03-12-203733-0000_create_users/: up.sql
migrations/2026-03-12-210000-0001_create_game_tables/: down.sql  up.sql
migrations/2026-03-13-000001-0002_create_media_tables/: down.sql  up.sql
migrations/2026-03-13-000002-0003_add_image_fields/: down.sql  up.sql
migrations/2026-03-13-100000-0004_add_creature_image_url/: down.sql  up.sql
migrations/2026-03-15-053903-0000_0005_create_vfs_tables/: down.sql  up.sql
migrations/2026-03-15-100000-0000_0006_add_vfs_mode/: down.sql  up.sql
migrations/2026-03-15-120000-0000_0007_remove_scratch_drives_and_archive/: down.sql  up.sql
migrations/2026-03-19-000000-0008_add_token_rotation/: down.sql  up.sql
migrations/2026-03-19-100000-0009_add_user_ping_color/: down.sql  up.sql
migrations/2026-03-19-200000-0010_add_user_suppress_tooltips/: down.sql  up.sql
migrations/2026-03-20-000000-0011_add_map_default_token_color/: down.sql  up.sql
migrations/2026-03-20-100000-0012_token_instances_nullable_creature/: down.sql  up.sql
scripts/: admin-delete-session.sh  admin-delete-user.sh  admin-list-sessions.sh  admin-list-users.sh  build-release.sh  deploy.sh
src/: app.rs  auth.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  scratch_drive.rs  vfs.rs
src/components/: browser_helpers.rs  charsheet.rs  chat.rs  creatures.rs  file_browser.rs  help_viewer.rs  initiative.rs  inventory.rs  map.rs  media_browser.rs  mod.rs  terminal.rs  window_manager.rs
src/components/window_manager/: dock.rs  mod.rs  persistence.rs  settings.rs
src/pages/: game.rs  landing.rs  login.rs  mod.rs  sessions.rs
src/server/: api.rs  media_handler.rs  metrics.rs  mod.rs  tui.rs  ws_handler.rs
src/server/ws_handler/: character.rs  chat.rs  initiative.rs  inventory.rs  maps.rs  mod.rs  tokens.rs
src/ws/: messages.rs  mod.rs  session.rs
style/: main.css
