[package]
name = "webrpg"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
diesel = { version = "2.3.6", features = ["sqlite"] }
dotenv = "0.15.0"
leptos = { version = "0.8.15", features = ["csr"] }
log = "0.4.29"
once_cell = "1.21.4"
zeroize = "1.8.2"
