[package]
name = "webrpg"
version = "0.2.0"
edition = "2024"
authors = ["Jon Mayo <jon@rm-f.net>"]
description = "A roleplaying game virtual tabletop server."
license = "MIT-0" # MIT No Attribution
repository = "https://github.com/OrangeTide/WebRPG"
readme = "README.md"
keywords = ["webserver", "vtt"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# SSR dependencies
leptos_axum = { version = "0.8", optional = true }
axum = { version = "0.8", features = ["ws", "multipart"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
diesel = { version = "2.3", features = ["sqlite", "r2d2"], optional = true }
dotenvy = { version = "0.15", optional = true }
argon2 = { version = "0.5", optional = true }
jsonwebtoken = { version = "9", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rand = { version = "0.8", optional = true }
once_cell = { version = "1", optional = true }
dashmap = { version = "6", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
sha2 = { version = "0.10", optional = true }

# Hydrate/client dependencies
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "DomRect",
    "MouseEvent",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "Location",
    "FormData",
    "Headers",
    "Request",
    "RequestInit",
    "RequestCredentials",
    "Response",
    "Blob",
    "File",
    "FileList",
    "Storage",
] }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:diesel",
    "dep:dotenvy",
    "dep:argon2",
    "dep:jsonwebtoken",
    "dep:chrono",
    "dep:rand",
    "dep:once_cell",
    "dep:dashmap",
    "dep:tower",
    "dep:tower-http",
    "dep:futures",
    "dep:uuid",
    "dep:axum-server",
    "dep:sha2",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "webrpg"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
